# OxideSEO

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README-2.md  README.md  SECURITY.md  cliff.toml  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/rules/: conventions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  plugin-api-reference.md  plugin-api-stability.md  plugin-development.md  plugin-examples.md
docs/adr/: 0001-record-architecture-decisions.md  0002-channel-based-crawl-engine.md  0003-wasm-plugin-sandboxing.md  (+1 more)
e2e/: playwright.config.ts  tsconfig.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: frontier_ops.rs  html_parsing.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_advanced_crawl.sql  003_ai_analysis.sql  004_plugins.sql  005_crawl_comparison.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: engine.rs  keystore.rs  mod.rs  prompts.rs  provider.rs
src-tauri/src/ai/adapters/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai.rs  crawl.rs  export.rs  mod.rs  plugin.rs  results.rs  settings.rs
src-tauri/src/crawler/: engine.rs  external_checker.rs  fetcher.rs  frontier.rs  js_renderer.rs  mod.rs  parser.rs  politeness.rs  robots.rs  sitemap.rs
src-tauri/src/plugin/: error.rs  exporter.rs  manager.rs  manifest.rs  mod.rs  native_host.rs  post_processor.rs  wasm_host.rs  wasm_rule.rs
src-tauri/src/rules/: engine.rs  mod.rs  post_crawl.rs  rule.rs
src-tauri/src/rules/builtin/: content.rs  images.rs  links.rs  meta.rs  mod.rs  performance.rs  security.rs
src-tauri/src/storage/: db.rs  mod.rs  models.rs  queries.rs  writer.rs
src-tauri/templates/: report.html
src-tauri/tests/: ai_integration.rs  crawl_integration.rs
src-tauri/wit/: oxide-seo-plugin.wit
tests/: setup.ts
(+160 files in other folders)
